--- a/pom.xml
+++ b/pom.xml
@@ -18,8 +18,8 @@
         <jstl.version>1.2</jstl.version>
         <junit.version>4.10</junit.version>
         <logback.version>1.1.3</logback.version>
-        <maven.compiler.source>1.8</maven.compiler.source>
-        <maven.compiler.target>1.8</maven.compiler.target>
+        <maven.compiler.source>11</maven.compiler.source>
+        <maven.compiler.target>11</maven.compiler.target>
     </properties>
 
     <dependencies>
@@ -211,7 +211,7 @@
 	<repositories>
     <repository>
       <id>${NEXUS_GRP_REPO}</id>
-      <url>http://${NEXUSIP}:${NEXUSPORT}/repository/${NEXUS_GRP_REPO}/</url>
+      <url>http://${NEXUS_IP}:${NEXUS_PORT}/repository/${NEXUS_GRP_REPO}/</url>
     </repository>
   </repositories>
 </project>
