--- a/StagePipeline/Jenkinsfile
+++ b/StagePipeline/Jenkinsfile
@@ -26,6 +26,13 @@ pipeline {
         NEXUS_LOGIN = 'nexuslogin'
         SONARSCANNER = 'sonarscanner'
         SONARSERVER = 'sonarserver'
+        // AWS Credential, through which ecr can be accessed
+        // format : 'ecr:<region>:<credentialID>' 
+        registryCredential = 'ecr:us-east-1:awscreds'
+        // ECR registery URI
+        appRegistery = '495287304242.dkr.ecr.us-east-1.amazonaws.com/vprofileappimg'
+        // ECR repository URL
+        vprofileRegistery = 'https://495287304242.dkr.ecr.us-east-1.amazonaws.com'
     }
 
     stages {
@@ -103,8 +110,28 @@ pipeline {
                     )
             }
         }
-    }
 
+        stage ('Build App Image') {
+            steps {
+                script {
+                    dockerImage = docker.build( aappRegistery + ":$BUILD_NUMBER", "./Docker-files/app/multistage/")
+                }
+            }
+        }
+
+        stage ('Upload App Image') {
+            steps {
+                script {
+                    docker.withRegistery( vprofileRegistery, registryCredential ) {
+                        dockerImage.push("$BUILD_NUMBER")
+                        dockerImage.push('latest')
+                    }
+                }
+            }
+        }
+
+    }
+    
     post {
         always {
             slackSend channel: '#devops', 
